# aNotherWS

./: CMakeLists.txt  ChangeLog  Doxyfile  README.md  pepper-toolchain.cmake
doc/: rfc6455.txt
include/ws/: CAsyncs.h  CChecker.h  CLock.h  CLoop.h  CSingleton.h  CTask.h  CThread.h  CWSClient.h  CWSServer.h  common.h  encode.h  membuf.h  sha1.h  uvutil.h  wsutil.h
src/ws/: CAsyncs.cpp  CChecker.cpp  CLoop.cpp  CTask.cpp  CThread.cpp  CWSClient.cpp  CWSServer.cpp  common.cpp  encode.cpp  membuf.cpp  sha1.cpp  uvutil.cpp  wsutil.cpp
test/: CTaskTest.cpp  ProtolParseTest.cpp  WsClientTestBase.cpp  WsClientTestBaseNoEndMsg.cpp  WsClientTestSendEnd.cpp  WsServerTestBase.cpp  echo-client.cpp  echo-server.cpp  fs-test.cpp  helloworld.cpp  onchange.cpp  queue-work.cpp  test-singleton.cpp  testWs.cpp  test_header.h  websocket_test.html  ws-client-class-varLenData.cpp  ws-client4.cpp  ws-server-class-varLenData.cpp  ws-server4.cpp  ws-testAuto.cpp  ws-testMultipleClients.cpp  ws-testStableMediumSizeData.cpp  ws-testStableSmallSizeData.cpp
test/simple-websocket-client/: wsTest.py
